--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import "~bootstrap/dist/css/bootstrap.css";
+@import "../node_modules/bootstrap-scss/bootstrap.scss";
 
 /* You can add global styles to this file, and also import other style files */
 
