--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,25 +1,26 @@
 <div class="container-fluid h-100">
   <div class="row justify-content-center align-items-center h-100">
-    <div class="col-4 mx-auto">
+    <div class="col-5 mx-auto">
       <h1 class="text-center">
         {{ 'PAGES.LOGIN.TITLE' | translate }}
       </h1>
-      <form>
+
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
-          <label for="exampleInputEmail1">{{ 'PAGES.LOGIN.EMAIL' | translate }}</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="{{ 'PAGES.LOGIN.EMAILPH' | translate }}">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          <label for="emailInput">{{ 'PAGES.LOGIN.EMAIL' | translate }}</label>
+          <input type="email" formControlName="email" class="form-control" id="emailInput" aria-describedby="emailPlaceholder" placeholder="{{ 'PAGES.LOGIN.EMAILPH' | translate }}">
+          <small id="emailPlaceholder" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
-          <label for="exampleInputPassword1">{{ 'PAGES.LOGIN.PASSWORD' | translate }}</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="{{ 'PAGES.LOGIN.PASSWORDPH' | translate }}">
+          <label for="passwordInput">{{ 'PAGES.LOGIN.PASSWORD' | translate }}</label>
+          <input type="password" formControlName="password" class="form-control" id="passwordInput" placeholder="{{ 'PAGES.LOGIN.PASSWORDPH' | translate }}">
         </div>
         <div class="row">
           <div class="col">
             <div class="form-group form-check">
               <small>
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">{{ 'PAGES.LOGIN.REMEMBERME' | translate }}</label>
+                <input type="checkbox" class="form-check-input" id="rememberMeCheckbox">
+                <label class="form-check-label" for="rememberMeCheckbox">{{ 'PAGES.LOGIN.REMEMBERME' | translate }}</label>
               </small>
             </div>
           </div>
@@ -30,9 +31,13 @@
             </small>
           </div>
         </div>
-        <button routerLink="/home" routerLinkActive="active" class="btn btn-primary btn-block">{{ 'PAGES.LOGIN.SIGNIN' | translate }}</button>
+        <button type="submit" [disabled]="!loginForm.valid" class="btn btn-primary btn-block">{{ 'PAGES.LOGIN.SIGNIN' | translate }}</button>
         <a href="https://minecraft.net/en-us/store/minecraft/" class="btn btn-outline-primary btn-block">{{ 'PAGES.LOGIN.SIGNUP' | translate }}</a>
       </form>
+
     </div>
   </div>
 </div>
+
+
+routerLink="/home" routerLinkActive="
