--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,26 +3,27 @@
 /* You can add global styles to this file, and also import other style files */
 
 @font-face {
-    font-family: 'SF Display';
-    src: url("./assets/fonts/SFDisplay-Regular.woff");
+  font-family: 'SF Display';
+  src: url("./assets/fonts/SFDisplay-Regular.woff");
 }
 
 @font-face {
-    font-family: 'Minecraftia';
-    src: url("./assets/fonts/Minecraftia-Regular.ttf");
+  font-family: 'Minecraftia';
+  src: url("./assets/fonts/Minecraftia-Regular.ttf");
 }
 
-html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
 
 body {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-text-stroke: 0.45px rgba(0, 0, 0, 0.1);
-    font-family: 'SF Display';
-    font-weight: 400;
-    letter-spacing: -.008em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-stroke: 0.45px rgba(0, 0, 0, 0.1);
+  font-family: 'SF Display';
+  font-weight: 400;
+  letter-spacing: -.008em;
 }
