--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,4 @@
-@import "../node_modules/bootstrap-scss/bootstrap.scss";
-
-/* You can add global styles to this file, and also import other style files */
+@import 'custom';
 
 @font-face {
   font-family: 'SF Display';
@@ -10,20 +8,4 @@
 @font-face {
   font-family: 'Minecraftia';
   src: url("./assets/fonts/Minecraftia-Regular.ttf");
-}
-
-html,
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
-
-body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-stroke: 0.45px rgba(0, 0, 0, 0.1);
-  font-family: 'SF Display';
-  font-weight: 400;
-  letter-spacing: -.008em;
 }
