Added getMe(), getUser(), getUuid(), getMySkinUrl(), changeMySkin() & input to upload a skin from an URL

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,8 +4,24 @@
       <h1 class="text-center">
         {{ 'PAGES.HOME.TITLE' | translate }}
       </h1>
-      <button (click)="signout()" class="btn btn-primary btn-block">{{ 'PAGES.HOME.SIGNOUT' |
-        translate }}</button>
+      <button (click)="signout()" class="btn btn-primary btn-block">
+        {{ 'PAGES.HOME.SIGNOUT' | translate }}
+      </button>
+      <span *ngIf="user$ | async as user">{{ user.name }}</span>
+
+      <img class="img-fluid" [src]="getMySkinUrl()" alt="Player avatar">
+
+      <!--<input placeholder="enter url skin" [(ngModel)]="skinUrl" type="text">
+      <button [disabled]="!skinUrl" (click)="changeMySkin(skinUrl)">Upload skin</button>-->
+
+      <div class="input-group mb-3">
+        <input type="text" [(ngModel)]="skinUrl" class="form-control" placeholder="https://mcskin.com/example.png"
+          aria-label="Skin URL" aria-describedby="Skin URL">
+        <div class="input-group-append">
+          <button [disabled]="!skinUrlForm.valid" (click)="changeMySkin(skinUrl)" class="btn btn-secondary">Change
+            skin</button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
